# power-control-host

./: .gitignore  README.md  UI_FEATURES.md  pyproject.toml
.claude/: settings.local.json
config/: devices.example.yaml  devices.local.yaml
docs/: 01-stage-results.md  02-architecture-roadmap.md  02-architecture.md  03-changelog.md  03-stage-1-playbook.md  04-multi-device-timing-plan.md  06-local-setup-and-poc.md  07-operation-manual.md  08-usb-first-contact.md  09-environment-setup.md
manual-tests/: README.md  device_scan_manual.ipynb  odp_sequence_manual.ipynb  odp_socket_probe.ipynb  psw_sequence_manual.ipynb
power-control-host/: .gitignore  README.md
power-control-host/config/: devices.local.yaml
power-control-host/docs/: 01-project-overview.md  04-roadmap.md  05-next-actions.md  07-operation-manual.md
power-control-host/src/power_control_host/: logging_config.py  settings.py
power-control-host/src/power_control_host/devices/: base.py
power-control-host/src/power_control_host/ui/: cli.py
src/power_control_host/: __init__.py  __main__.py  app.py  discovery.py  models.py  settings.py
src/power_control_host/devices/: odp.py  psw.py  registry.py
src/power_control_host/services/: device_pool.py  device_service.py  log_export_service.py  sequence_service.py  timing_config.py
src/power_control_host/transports/: base.py  serial_transport.py  socket_transport.py  visa_transport.py
src/power_control_host/ui/: cli.py  cli_parsing.py
tests/: __init__.py  test_cli.py  test_discovery.py  test_multi_device_timing.py  test_sequence_service.py
(+1 files in other folders)
